Fix about me list of skills alignment.

--- a/files/css/landingpage.css
+++ b/files/css/landingpage.css
@@ -9,8 +9,8 @@
 }
 
 #skillsList {
-    margin-left: 38%;
-    margin-right: 41%;
+    margin-left: 36%;
+    margin-right: 44%;
     text-align: center;
     list-style: none;
 }
